<resources>
    <string name="app_name">Add features with contingent values</string>
    <string name="contingent_note">The options will vary depending on which values are selected</string>
    <string name="add_feature">Add Feature</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="set_the_attributes">Set the attributes:</string>
    <string name="select_status_attribute">Select status attribute</string>
    <string name="select_protection_attribute">Select protection attribute</string>
    <string name="exclusion_area_buffer_size">Exclusion area buffer size</string>
</resources>
